--- a/index.html
+++ b/index.html
@@ -4,28 +4,41 @@
     <link rel="stylesheet" href="style.css" />
     <title>Pokemon RPS</title>
     <body>
-      <main id="main-content">
-        <h1 id="title">Pokemon Starter RPS</h1>
+      <main class="main-content">
+        <h1 class="title">Pokemon Starter RPS</h1>
         <div id="game-container">
-          <div id="btn-container">
+          <div class="btn-container">
             <div id="grass" class="button">
               <img src="Sprigatito.png" class="buttonImg" alt="Grass" />
             </div>
           </div>
-          <div id="btn-container">
+          <div class="btn-container">
             <div id="fire" class="button">
               <img src="Fuecoco.png" class="buttonImg" alt="Fire" />
             </div>
           </div>
-          <div id="btn-container">
+          <div class="btn-container">
             <div id="water" class="button">
               <img src="Quaxly.png" class="buttonImg" alt="Water" />
             </div>
           </div>
         </div>
         <div id="score-container">
-          <div id="player-score">0</div>
-          <div id="rival-score">0</div>
+          <div id="score-title">Score</div>
+          <div id="score-number-container">
+            <div id="player-container">
+              <div id="player-title">You</div>
+              <div id="player-score-container">
+                <div id="player-score" class="score">0</div>
+              </div>
+            </div>
+            <div id="rival-container">
+              <div id="rival-title">Rival</div>
+              <div id="rival-score-container">
+                <div id="rival-score" class="score">0</div>
+              </div>
+            </div>
+          </div>
         </div>
         <div id="results-container"></div>
       </main>
