Added - Rival Image, Theme Text, Cropped Background Image. Style Changes: Results Box, New Score Boxes Added visual of what choices were picked

--- a/index.html
+++ b/index.html
@@ -40,7 +40,28 @@
             </div>
           </div>
         </div>
-        <div id="results-container"></div>
+        <div id="battle-container">
+          <div id="battle-slot-container">
+            <div class="battle-slot" id="player-battle-slot">
+              <img
+                id="player-pokeball"
+                class="pokeball-img"
+                src="pokeball.png"
+              />
+            </div>
+            <div class="battle-slot" id="rival-battle-slot">
+              <img
+                class="pokeball-img"
+                id="rival-pokeball"
+                src="pokeball.png"
+              />
+            </div>
+          </div>
+          <img src="Rival.webp" id="rival-image" />
+        </div>
+        <div id="results-container">
+          <div id="results-text"></div>
+        </div>
       </main>
     </body>
   </head>
