Added: Rival Dialogue Rival Dialouge Logic
Changed:
Modal Font

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <p class="modal-text">Instructions:</p>
             <p class="modal-text">
               Simply click a starter to choose against the computer rival. Your
-              rival will randomly pick their own starter. First to 5 wins!
+              rival will randomly pick their own starter. First to
+              <b>5</b> wins!
             </p>
             <div id="modal-reference-images">
               <img id="type-matchup-image" src="type-matchup.jpg" />
@@ -106,6 +107,9 @@
                 src="pokeball.png"
               />
             </div>
+          </div>
+          <div id="rival-text-container">
+            <div id="rival-text"></div>
           </div>
           <img src="Rival.webp" id="rival-image" />
         </div>
