Add typewriter animation for Results

--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
           <img src="Rival.webp" id="rival-image" />
         </div>
         <div id="results-container">
-          <div id="results-text"></div>
+          <div class="results-text-container">
+            <div class="results-text-anim" id="results-text"></div>
+          </div>
         </div>
       </main>
     </body>
